; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/virtio/extr_virtio_balloon.c_page_to_balloon_pfn.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/virtio/extr_virtio_balloon.c_page_to_balloon_pfn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@PAGE_SHIFT = common dso_local global i64 0, align 8
@VIRTIO_BALLOON_PFN_SHIFT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.page*)* @page_to_balloon_pfn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @page_to_balloon_pfn(%struct.page* %0) #0 {
  %2 = alloca %struct.page*, align 8
  %3 = alloca i64, align 8
  store %struct.page* %0, %struct.page** %2, align 8
  %4 = load %struct.page*, %struct.page** %2, align 8
  %5 = call i64 @page_to_pfn(%struct.page* %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* @PAGE_SHIFT, align 8
  %7 = load i64, i64* @VIRTIO_BALLOON_PFN_SHIFT, align 8
  %8 = icmp slt i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @BUILD_BUG_ON(i32 %9)
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* @PAGE_SHIFT, align 8
  %13 = load i64, i64* @VIRTIO_BALLOON_PFN_SHIFT, align 8
  %14 = sub nsw i64 %12, %13
  %15 = lshr i64 %11, %14
  ret i64 %15
}

declare dso_local i64 @page_to_pfn(%struct.page*) #1

declare dso_local i32 @BUILD_BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
